Agregando estilos responsivos a la página principal

--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
                     <p>$ 60,00</p>
                     <a class="productos__seleccionables__boton" href="./ver-producto.html">Ver Producto</a>
                 </div>
-                <div class="productos__seleccionables container_2"><img src="./img/star-wars/producto2.png" alt="producto1">
+                <div class="productos__seleccionables container_1"><img src="./img/star-wars/producto2.png" alt="producto1">
                     <h1>Lego Darth Vader</h1>
                     <p>$ 75,00</p>
                     <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
                 </div>
-                <div class="productos__seleccionables container_2"><img src="./img/star-wars/producto3.png" alt="producto1">
+                <div class="productos__seleccionables container_2"><img class="figuras" src="./img/star-wars/producto3.png" alt="producto1">
+                  <div class="figuras">
                     <h1>Yoda Figura</h1>
                     <p>$ 82,00</p>
                     <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
+                  </div>
                 </div>
                 <div class="productos__seleccionables container_2"><img src="./img/star-wars/producto4.png" alt="producto1">
                     <h1>Stormtrooper Figura</h1>
@@ -67,10 +69,12 @@
                     <p>$ 85,00</p>
                     <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
                 </div>
-                <div class="productos__seleccionables container_2"><img src="./img/star-wars/producto6.png" alt="producto1">
+                <div class="productos__seleccionables container_2"><img class="figuras" src="./img/star-wars/producto6.png" alt="producto1">
+                  <div class="figuras">
                     <h1>Kylo Ren Figura</h1>
                     <p>$ 93,00</p>
                     <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
+                  </div>
                 </div>
               </div>
                 <div id="consolas" class="consolas">
@@ -98,15 +102,19 @@
                     <p>$ 105,00</p>
                     <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
                   </div>
-                  <div class="productos__seleccionables container_2"><img src="./img/consolas/producto5.png">
+                  <div class="productos__seleccionables container_2"><img class="consola" src="./img/consolas/producto5.png">
+                    <div class="consola">
                     <h1>Consola Xbox Serie X</h1>
                     <p>$ 722,00</p>
                     <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
                   </div>
-                  <div class="productos__seleccionables container_2"><img src="./img/consolas/producto6.png">
+                  </div>
+                  <div class="productos__seleccionables container_2"><img class="consola" src="./img/consolas/producto6.png">
+                    <div class="consola">
                     <h1>Game boy Color</h1>
                     <p>$ 80,00</p>
                     <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
+                  </div>
                   </div>
                 </div>
                   <div class="diversos">
@@ -134,15 +142,19 @@
                       <p>$ 35,00</p>
                       <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
                     </div>
-                    <div class="productos__seleccionables container_2"><img src="./img/diversos/producto5.png">
-                      <h1>Gafas de Realidad Virtual</h1>
+                    <div class="productos__seleccionables container_2"><img class="diverso" src="./img/diversos/producto5.png">
+                      <div class="diverso">
+                      <h1>Oculus Rift</h1>
                       <p>$ 80,00</p>
                       <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
                     </div>
-                    <div class="productos__seleccionables container_2"><img src="./img/diversos/producto6.png">
-                      <h1>Vestuario Pokemon Pikachu</h1>
+                    </div>
+                    <div class="productos__seleccionables container_2"><img class="diverso" src="./img/diversos/producto6.png">
+                      <div class="diverso">
+                      <h1>Outfit Pokemon Pikachu</h1>
                       <p>$ 50,00</p>
                       <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
+                    </div>
                     </div>
                 </div>
             </div>
