Continuación de modificaciones responsive

--- a/todos-los-productos.html
+++ b/todos-los-productos.html
@@ -28,7 +28,7 @@
                 <a class="agregar_productos__boton" href="./agregar-producto.html">Agregar producto</a>
             </div>
             <section class="seccion_productos">
-            <div>
+                <div>
                 <div class="productos__seleccionables container_2"><img src="./img/star-wars/producto1.png" alt="producto1">
                     <div class="trash_icon">
                         <i class="fa-solid fa-trash"></i>
@@ -106,6 +106,7 @@
                     <p>$ 93,00</p>
                     <p>#1111111</p>
                     </div>
+                </div>
                 </div>
             </div>
             <div>
@@ -186,8 +187,8 @@
                     <p>$ 80,00</p>
                     <p>#1111111</p>
                     </div>
-                </div> 
-            </div>
+                </div>
+                </div>
             <div>
             <div class="productos__seleccionables container_2"><img src="./img/diversos/producto1.png">
                 <div class="trash_icon">
@@ -249,7 +250,7 @@
                         <i class="fa-solid fa-pen"></i>
                     </div>
                     <div class="productos_info">
-                <h1>Gafas de Realidad Virtual</h1>
+                <h1>Oculus Rift</h1>
                 <p>$ 80,00</p>
                 <p>#1111111</p>
                     </div>
@@ -262,7 +263,7 @@
                         <i class="fa-solid fa-pen"></i>
                     </div>
                     <div class="productos_info">
-                <h1>Vestuario Pokemon Pikachu</h1>
+                <h1>Outfit Pokemon Pikachu</h1>
                 <p>$ 50,00</p>
                 <p>#1111111</p>
                     </div>
