Todos los productos, parte responsive

--- a/todos-los-productos.html
+++ b/todos-los-productos.html
@@ -144,7 +144,7 @@
                         <i class="fa-solid fa-pen"></i>
                     </div>
                     <div class="productos_info">
-                    <h1>Consola Nintendo Retro</h1>
+                    <h1>Consola Retro</h1>
                     <p>$ 25,00</p>
                     <p>#1111111</p>
                     </div>
@@ -263,7 +263,7 @@
                         <i class="fa-solid fa-pen"></i>
                     </div>
                     <div class="productos_info">
-                <h1>Outfit Pokemon Pikachu</h1>
+                <h1>Pikachu Costume</h1>
                 <p>$ 50,00</p>
                 <p>#1111111</p>
                     </div>
