Metodo responsive, agregar productos area

--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -28,25 +28,25 @@
             <div class="formulario_agregar_productos container">
                 <h2 class="formulario_agregar_productos__titulo">Agregar nuevo producto</h2>
                 <form class="formulario_agregar_productos__form" action="">
-                    <div class="formulario_login__input-container">
+                    <div class="formulario_agregar_productos__input-container">
                         <input class="input-1 inputs-1" type="text" name="URL" id="URL" placeholder="" required data-tipo="URL" data-form-url>
                         <label class="input_label" for="input_label">URL de imagen</label>
                     </div>
                     <div class="formulario_agregar_productos__input-container">
-                        <input class="input-1 inputs-1 input_contraseña" type="text" name="categoria" id="categoria" placeholder="" required data-tipo="categoria" data-form-contraseña>
-                        <label class="input_label" for="categoria">Categoría</label>
+                        <input class="input-1 inputs-1" type="text" name="categoria" id="categoria" placeholder="" required data-tipo="categoria" data-form-contraseña>
+                        <label class="input_label" for="input_label">Categoría</label>
                     </div>
                     <div class="formulario_agregar_productos__input-container">
-                        <input class="input-1 inputs-1 input_contraseña" type="text" name="nombre" id="nombre" placeholder="" required data-tipo="nombre" data-form-nombre>
-                        <label class="input_label" for="nombre">Nombre del producto</label>
+                        <input class="input-1 inputs-1" type="text" name="nombre" id="nombre" placeholder="" required data-tipo="nombre" data-form-nombre>
+                        <label class="input_label" for="input_label">Nombre del producto</label>
                     </div>
                     <div class="formulario_agregar_productos__input-container">
-                        <input class="input-1 inputs-1 input_precio" type="number" name="precio" id="precio" placeholder="$" required data-tipo="precio" data-form-contraseña>
-                        <label class="input_label" for="precio">Precio del producto</label>
+                        <input class="input-1 inputs-1" type="number" name="precio" id="precio" placeholder="$" required data-tipo="precio" data-form-contraseña>
+                        <label class="input_label" for="input_label">Precio del producto</label>
                     </div>
                     <div class="formulario_agregar_productos__input-container">
-                        <input class="input-2 inputs-2 input_descripcion" type="text" name="descripcion" id="descripcion" placeholder="" required data-tipo="descripcion" data-form-descripcion>
-                        <label class="input_label__descripcion" for="descripcion">Descripción del producto</label>
+                        <input class="input-2 inputs-2" type="text" name="descripcion" id="descripcion" placeholder="" required data-tipo="descripcion" data-form-descripcion>
+                        <label class="input_label__descripcion" for="input_label">Descripción del producto</label>
                     </div>
                     <input class="boton_formulario_agregar_productos" type="submit" name="agregar producto" id="apregar-producto" value="Agregar producto">
                 </form>
