Finalizando version responsive

--- a/ver-producto.html
+++ b/ver-producto.html
@@ -27,7 +27,7 @@
                 <img class="ver-producto_imagen" src="./img/unsplash_6FDXGY9J6y4.png" alt="">
                 <div class="ver-producto-info">
                 <h2>Producto Taza Stormtrooper</h2>
-                <p>$60.00</p>
+                <p class="p-1">$60.00</p>
                 <p>¡Adéntrate en la galaxia lejana con esta increíble taza de los Stormtroopers de Star Wars! Diseñada meticulosamente para cautivar a todos los fanáticos de la legendaria saga, esta taza es el accesorio perfecto para darle un toque épico a tus momentos de café o té.</p>
             </div>
             </div>
@@ -66,14 +66,14 @@
                         <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
                         </div>
                     </div>
-                    <div class="productos__seleccionables container_2"><img src="./img/star-wars/producto5.png" alt="producto1">
+                    <div class="productos__seleccionables-1 container_3"><img src="./img/star-wars/producto5.png" alt="producto1">
                         <div class="productos_info">
                         <h1>Baby Yoda</h1>
                         <p>$ 85,00</p>
                         <a class="productos__seleccionables__boton" href="#">Ver Producto</a>
                         </div>
                     </div>
-                    <div class="productos__seleccionables container_2"><img src="./img/star-wars/producto6.png" alt="producto1">
+                    <div class="productos__seleccionables-1 container_3"><img src="./img/star-wars/producto6.png" alt="producto1">
                         <div class="productos_info">
                         <h1>Kylo Ren Figura</h1>
                         <p>$ 93,00</p>
