--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <div class="star_wars">
                 <div class="star_wars__head">
                     <h1 class="star_wars__head__titulo">Star Wars</h1>
-                    <a class="star_wars__head__boton" href="./todos-los-productos.html">Ver todos <i class="fa-solid fa-arrow-right"></i></a>
+                    <a class="star_wars__head__boton" href="#">Ver todos <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="productos__seleccionables container_2"><img src="./img/star-wars/producto1.png" alt="producto1">
                     <h1>Taza Stormtrooper</h1>
@@ -80,7 +80,7 @@
                 <div id="consolas" class="consolas">
                   <div class="consolas__head">
                     <h1 class="consolas__head__titulo">Consolas</h1>
-                    <a class="consolas__head__boton" href="./todos-los-productos.html">Ver todos <i class="fa-solid fa-arrow-right"></i></a>
+                    <a class="consolas__head__boton" href="#">Ver todos <i class="fa-solid fa-arrow-right"></i></a>
                   </div>
                   <div class="productos__seleccionables container_2"><img src="./img/consolas/producto1.png" alt="producto1">
                     <h1>Xbox Mando</h1>
@@ -120,7 +120,7 @@
                   <div class="diversos">
                     <div class="diversos__head">
                       <h1 class="diversos__head__titulo">Diversos</h1>
-                      <a class="diversos__head__boton" href="./todos-los-productos.html" >Ver todos <i class="fa-solid fa-arrow-right"></i></a>
+                      <a class="diversos__head__boton" href="#" >Ver todos <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="productos__seleccionables container_2"><img src="./img/diversos/producto1.png">
                       <h1>Camiseta Atari</h1>
